--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa 
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
+
+spring.jpa.hibernate.ddl-auto = create-drop
